[package]
name = "accountant"
version = "0.1.0"
authors = ["lucas7788 <sishsh@163.com>"]
edition = "2018"
license = "Apache-2.0/MIT"
homepage = "https://github.com/ont-bizsuite/ddxf-contract-suite"
repository = "https://github.com/ont-bizsuite/ddxf-contract-suite"
description = "ddxf protocol implement"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"] #Compile as a dynamic link library

[dependencies]
#ontio-std = {path="/Users/sss/dev/dockerData/rust_project/ontio-cdk-1/ontio-std"}
common = {path="../../common", version = "0.1.0"}
ontio-std = {git = "https://github.com/ontio/ontology-wasm-cdt-rust.git", version = "0.1.0"}

[features]
mock = ["ontio-std/mock"]