[package]
name = "data_id"
version = "0.1.0"
authors = ["lucas7788 <sishsh@163.com>"]
edition = "2018"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"] #Compile as a dynamic link library

[dependencies]
#ontio-std = {path="/Users/sss/dev/dockerData/rust_project/ontio-cdk-1/ontio-std"}
#ontio-std = {git = "https://github.com/lucas7788/ontio-cdk-1.git", branch="update_event"}
ontio-std = {git = "https://github.com/ontio/ontology-wasm-cdt-rust.git"}
common = {path="../../common"}

[features]
mock = ["ontio-std/mock"]