[package]
name = "dtoken"
version = "0.1.0"
authors = ["lucas7788 <sishsh@163.com>"]
edition = "2018"
homepage = "https://github.com/ont-bizsuite/ddxf-contract-suite"
repository = "https://github.com/ont-bizsuite/ddxf-contract-suite"
description = "dtoken contract implement"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
crate-type = ["cdylib"] #Compile as a dynamic link library

[dependencies]
#ontio-std = {git = "https://github.com/lucas7788/ontio-cdk-1.git", branch="update_event"}
#ontio-std = {path="/Users/sss/dev/dockerData/rust_project/ontio-cdk-1/ontio-std"}
common = {path="../../common"}
ontio-std = {git = "https://github.com/ontio/ontology-wasm-cdt-rust.git"}

[dev-dependencies]
etcommon-hexutil = { version = "0.2.4", default-features = false }


[features]
mock = ["ontio-std/mock"]